fix: fix doubao sse
