# server/router/chat.go
@@ -15,29 +15,56 @@ import (
 )
 
 type ChatCompletionReq struct {
-	Model    string                   `json:"model"`
+	// 模型 Id
+	Model string `json:"model"`
+	// 消息列表
 	Messages []*ChatCompletionMessage `json:"messages"`
-	Stream   bool                     `json:"stream,omitempty"`
+	// 是否流式
+	Stream bool `json:"stream,omitempty"`
 }
 
 type ChatCompletionMessage struct {
-	Role    string `json:"role"`
+	// 角色
+	Role string `json:"role"`
+	// 内容
 	Content string `json:"content"`
+	// 推理内容（仅响应）
+	ReasoningContent string `json:"reasoning_content"`
 }
 
 type ChatCompletionResp struct {
-	Id      string                  `json:"id"`
-	Object  string                  `json:"object"`
-	Created int64                   `json:"created"`
-	Model   string                  `json:"model"`
+	// 请求的唯一标识
+	Id string `json:"id"`
+	// 响应类型
+	Object string `json:"object"`
+	// 请求创建的时间戳（秒级）
+	Created int64 `json:"created"`
+	// 模型 Id
+	Model string `json:"model"`
+	// 模型输出内容
 	Choices []*ChatCompletionChoice `json:"choices"`
+	// 用量
+	Usage *ChatCompletionUsage `json:"usage,omitempty"`
 }
 
 type ChatCompletionChoice struct {
-	Index        int64                  `json:"index"`
-	Message      *ChatCompletionMessage `json:"message,omitempty"`
-	Delta        *ChatCompletionMessage `json:"delta,omitempty"`
-	FinishReason string                 `json:"finish_reason,omitempty"`
+	// 消息索引
+	Index int64 `json:"index"`
+	// 模型输出消息列表（非流式）
+	Message *ChatCompletionMessage `json:"message,omitempty"`
+	// 模型输出的增量内容（流式）
+	Delta *ChatCompletionMessage `json:"delta,omitempty"`
+	// 模型停止输出原因
+	FinishReason string `json:"finish_reason,omitempty"`
+}
+
+type ChatCompletionUsage struct {
+	// 总消耗 tokens
+	TotalTokens int `json:"total_tokens"`
+	// 输入 tokens
+	PromptTokens int `json:"prompt_tokens"`
+	// 输出 tokens
+	CompletionTokens int `json:"completion_tokens"`
 }
 
 var chatPrompt = template.Must(template.New("").Parse(`
@@ -82,14 +109,15 @@ func hdrChatCompletions(c *Ctx) error {
 		return err
 	}
 
+	created := time.Now().Unix()
+
 	hdr, err := browser.B().HandleChat(req.Model, buf.String())
 	if err != nil {
 		return err
 	}
 
 	if !req.Stream {
-		content := hdr.WaitFinish(c.Context())
-		created := time.Now().Unix()
+		content, reason := hdr.WaitFinish(c.Context())
 		return c.Status(200).JSON(&ChatCompletionResp{
 			Id:      hdr.Id,
 			Object:  "chat.completion",
@@ -97,8 +125,9 @@ func hdrChatCompletions(c *Ctx) error {
 			Model:   req.Model,
 			Choices: []*ChatCompletionChoice{{
 				Message: &ChatCompletionMessage{
-					Role:    "assistant",
-					Content: content,
+					Role:             "assistant",
+					Content:          content,
+					ReasoningContent: reason,
 				},
 				FinishReason: "stop",
 			}},
@@ -111,28 +140,36 @@ func hdrChatCompletions(c *Ctx) error {
 	c.Set("Transfer-Encoding", "chunked")
 
 	c.Status(200).Context().SetBodyStreamWriter(func(w *bufio.Writer) {
+		tag := ""
 		for {
 			msg, ok := <-hdr.Ch
 			if !ok {
 				return
 			}
-			event := json.MustMarshalToString(&ChatCompletionResp{
-				Id:      hdr.Id,
-				Object:  "chat.completion.chunk",
-				Created: time.Now().Unix(),
-				Model:   req.Model,
-				Choices: []*ChatCompletionChoice{{
-					Index: cast.To[int64](msg.Id),
-					Delta: &ChatCompletionMessage{
-						Role:    "assistant",
-						Content: msg.Text,
-					},
-					FinishReason: msg.Finish,
-				}},
-			})
-			_, err = fmt.Fprintf(w, "data: %s\n\n", event)
-			if msg.Finish != "" {
-				_, _ = fmt.Fprintf(w, "[DONE]\n")
+			if msg.FinishReason == "" {
+				if msg.ReasoningTag != "" {
+					tag = msg.ReasoningTag
+					continue
+				}
+				delta := &ChatCompletionMessage{Role: "assistant"}
+				if tag == "1" {
+					delta.ReasoningContent = msg.Content
+				} else {
+					delta.Content = msg.Content
+				}
+				event := json.MustMarshalToString(&ChatCompletionResp{
+					Id:      hdr.Id,
+					Object:  "chat.completion.chunk",
+					Created: created,
+					Model:   req.Model,
+					Choices: []*ChatCompletionChoice{{
+						Index: cast.To[int64](msg.Index),
+						Delta: delta,
+					}},
+				})
+				_, err = fmt.Fprintf(w, "data: %s\n\n", event)
+			} else {
+				_, err = fmt.Fprintf(w, "[DONE]\n")
 			}
 			if err != nil {
 				logger.Ctx(c.UserContext()).Error().Err(err).Msg("write sse data error")
